<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KosherFood</string>
    <string name="action_settings">Settings</string>
    <string name="kosherfood">Kosher Food</string>
    <string name="start">Start</string>
    <string name="options">Options</string>
    <string name="exit">Exit</string>
    <string name="title_activity_kosher_surface">KosherSurfaceActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_options">Options</string>
    <string name="title_activity_food">Food</string>
    <string name="title_activity_high_scores">High Scores</string>
    <string name="title_activity_help">Help</string>
    <string name="help">Help</string>
    <string name="high_scores">High Scores</string>
    <string name="number_of_plates">Number of plates:</string>
    <string name="one_plate">One plate</string>
    <string name="four_plate">Four plate</string>
    <string name="enable_sounds">Enable sounds</string>
</resources>
